# mysquad

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.claude/: settings.json
.github/workflows/: release.yml
.husky/: pre-commit
docs/superpowers/plans/: 2026-03-12-mysquad-implementation.md  2026-03-12-salary-view-rework.md  2026-03-12-unified-views.md  2026-03-13-left-date-salary-over-time.md  2026-03-13-member-pictures.md  2026-03-13-optional-auth.md  2026-03-13-p6-virtualized-lists.md  2026-03-13-p7-react-memo-components.md  (+13 more)
scripts/: generate-latest-json.js  sync-version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/compiled/: Assets.car  logo.icns
src-tauri/icons/logo.icon/: icon.json
src-tauri/migrations/: 001_initial.sql  002_salary_data_points.sql  003_member_pictures.sql  004_projects.sql  005_exclude_from_salary.sql  006_reports.sql  007_add_indexes.sql  008_promoted_title.sql  009_previous_data_point.sql  010_left_date.sql  011_scenario_groups.sql  012_presentation_toggle.sql  013_lead_id.sql  014_meetings.sql  015_escalations.sql  016_report_blocks.sql  017_salary_template.sql  018_scenario_group_members.sql  019_soft_delete.sql  020_additional_indexes.sql  021_project_links.sql  022_drop_is_presented.sql
src-tauri/scripts/: compile-icon.sh  inject-icon.sh  release.sh
src-tauri/src/: biometric.rs  commands.rs  config.rs  db.rs  export_import.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
src-tauri/swift-helper/: authenticate.swift
src/components/: ErrorBoundary.tsx
src/hooks/: useAutoLock.ts  useAutoSave.ts  usePendingDelete.ts  useResourceLoader.ts  useSalarySync.ts  useStickyTooltip.ts  useTheme.ts  useTrashManager.ts  useVirtualList.ts
src/lib/: clipboard.ts  db.ts  salary-pdf.ts  salary-utils.ts  toast.ts  tree-utils.ts  types.ts  validators.ts
src/pages/: Meeting.tsx  Presentation.tsx  Projects.tsx  Reports.tsx  SalaryPlanner.tsx  Settings.tsx  TeamMeetings.tsx  TeamMembers.tsx  Titles.tsx
(+90 files in other folders)
