[package]
name = "mysquad"
version = "1.2.0"
description = "MySquad - Team Management App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mysquad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled-sqlcipher-vendored-openssl"] }
rand = "0.9"
hex = "0.4"
dirs = "6"
chrono = "0.4"
image = "0.25"
tauri-plugin-dialog = "2"
hmac = "0.12"
sha2 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Security_Credentials",
    "Foundation",
] }

[dev-dependencies]
tempfile = "3"
